[NWPS-1703] - Fixed alignment issue with publication doc icon

--- a/app/assets/hee/blocks/content/main/hee-publication-doc/_publication-doc.scss
+++ b/app/assets/hee/blocks/content/main/hee-publication-doc/_publication-doc.scss
@@ -1,5 +1,5 @@
 .hee-publication-doc {
-  align-items: center;
+  align-items: flex-start;
   display: flex;
   margin-bottom: map-get($nhsuk-spacing-points, 4);
 
